--- a/About-Us.html
+++ b/About-Us.html
@@ -105,7 +105,9 @@
         <a href="index.html">Main Page</a>
         <a href="home.html">Home</a>
         <a href="contact.html">Contact Us</a>
-        <a href="AboutUs.html"></a>
+        <a href="AboutUs.html"></a><a href="https://allshs12.github.io/Anihub/About-Us.html"></a>
+        
+        </a>
     </div>
 
     <h1>Operation ANI-HUB</h1>
