--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 
     <div class="navbar">
         <a href="home.html">Home</a>
-        <a href="about us.html">About Us</a>
-        <a href="contact us.html">Contact Us</a>
+        <a href="about-us.html">About Us</a>
+        <a href="contact-us.html">Contact Us</a>
         <a href="Animation NC II.html">ANIMATION NC II</a>
-       <a href="https://allshs12.github.io/Anihub/About-Us.html">
+     
         
        </a>
     </div>
