--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
     <div class="navbar">
         <a href="home.html">Home</a>
-        <a href="about-us.html">About Us</a>
-        <a href="contact-us.html">Contact Us</a>
+        <a href="about us.html">About Us</a>
+        <a href="contact us.html">Contact Us</a>
         <a href="Animation NC II.html">ANIMATION NC II</a>
      
         
