--- a/About-Us.html
+++ b/About-Us.html
@@ -101,13 +101,12 @@
 </head>
 <body>
 
-    <div class="navbar">
-        <a href="index.html">Main Page</a>
-        <a href="home.html">Home</a>
-        <a href="contact-us.html">Contact Us</a>
-        <a href="About-Us.html">About Us</a>
-        
-        </a>
+   <div class="navbar">
+    <a href="index.html">Main Page</a>
+    <a href="home.html">Home</a>
+    <a href="contact-us.html">Contact Us</a>
+    <a href="About-Us.html">About Us</a>
+</div>
     </div>
 
     <h1>Operation ANI-HUB</h1>
