--- a/About-Us.html
+++ b/About-Us.html
@@ -107,7 +107,6 @@
     <a href="contact-us.html">Contact Us</a>
     <a href="About-Us.html">About Us</a>
 </div>
-    </div>
 
     <h1>Operation ANI-HUB</h1>
     <h2>(Animation Network and Interactive Hub)</h2>
@@ -140,16 +139,16 @@
            <strong>District:</strong> City of Carmona</p>
 
         <h2>Introduction</h2>
-        <p>Animation NC II is a specialized subject at Angelo L. Loyola Senior High School (ALLSHS) in the Technical-Vocational-Livelihood (TVL) track in the strand of Information and Communication Technology (ICT). It is the process of creating an illusion of movement by displaying a series of images or frames in rapid succession. This art form is integral to multiple sectors, including entertainment, education, advertising, and communication, emphasizing the importance of animation in today’s visual culture.</p>
+        <p>Animation NC II is a specialized subject at Angelo L. Loyola Senior High School (ALLSHS) in the Technical-Vocational-Livelihood (TVL) track in the strand of Information and Communication Technology (ICT). It aims to equip students with the skills necessary to produce digital animations. The curriculum includes fundamentals of animation, character design, storyboarding, and advanced animation software.</p>
 
-        <p>Access to computers is paramount for TVL-ICT Animation students, as it influences their ability to explore and excel in the field of animation. Mastering animation techniques on computer systems not only fosters creativity but also equips students with essential skills required in today’s digital environment.</p>
+        <p>Access to computers is paramount for TVL-ICT Animation students, as it influences their ability to explore and excel in the field of animation. Mastering animation techniques on computers allows students to bring their creative visions to life and prepares them for future opportunities in the animation industry.</p>
 
-        <p>However, a significant problem arises in the Computer Laboratory of ICT Animation, where a limited number of computers results in students having to wait for access. This shortage adversely affects their learning experience, restricting practice time and hindering skill development.</p>
+        <p>However, a significant problem arises in the Computer Laboratory of ICT Animation, where a limited number of computers results in students having to wait for access. This shortage adversely affects students' learning experiences and their ability to complete projects efficiently. The ANI-HUB project seeks to mitigate this issue by providing an online platform where students can access animation resources and tools remotely.</p>
 
         <h2>Project Description</h2>
-        <p>Operation Ani-Hub is of paramount importance as it directly addresses the challenges faced by students in the ICT Animation computer laboratory. By providing a comprehensive online resource, this aims to enhance students' access to essential modules, images, videos, explanations, and many more tutorials that are crucial for mastering animation skills.</p>
+        <p>Operation Ani-Hub is of paramount importance as it directly addresses the challenges faced by students in the ICT Animation computer laboratory. By providing a comprehensive online resource hub, students can continue their learning and practice animation techniques outside the classroom. The ANI-HUB website will feature tutorials, software recommendations, project ideas, and a community forum for students to share their work and seek feedback.</p>
 
-        <p>The website will be designed with user-friendly navigation, ensuring students can access the resources anytime and anywhere. This flexibility is particularly beneficial for students who may not have consistent access to computers in the lab, allowing them to continue their learning outside of the classroom environment.</p>
+        <p>The website will be designed with user-friendly navigation, ensuring students can access the resources anytime and anywhere. This flexibility is particularly beneficial for students who may not have access to computers at home, as they can use mobile devices to continue their animation education.</p>
 
         <h2>Objectives</h2>
         <ul>
@@ -161,9 +160,7 @@
         </ul>
 
         <h2>Project Methodology</h2>
-        <p>The ANI-HUB website will be developed using HTML for structuring web content. The layout will consist of various elements like header, main, and footer to organize content effectively. Navigation links will be incorporated to ensure users can easily access different sections.</p>
-
-        <p>CSS will be utilized for styling to ensure the website is visually appealing and responsive across various devices. By carefully combining HTML for structure with CSS for presentation, the ANI-HUB website aims to deliver a captivating experience for students.</p>
+        <p>The ANI-HUB website will be developed using HTML for structuring web content. The layout will consist of various elements like header, main, and footer to organize content effectively. CSS will be utilized for styling to ensure the website is visually appealing and responsive across various devices. By carefully combining HTML for structure with CSS for presentation, the ANI-HUB website aims to provide an optimal user experience for students.</p>
     </div>
 
     <div class="footer">
@@ -172,3 +169,7 @@
 
 </body>
 </html>
+
+      
+
+   
