--- a/About-Us.html
+++ b/About-Us.html
@@ -104,7 +104,7 @@
    <div class="navbar">
     <a href="index.html">Main Page</a>
     <a href="home.html">Home</a>
-    <a href="contact-us.html">Contact Us</a>
+    <a href="contact-Us.html">Contact Us</a>
     <a href="About-Us.html">About Us</a>
 </div>
 
