--- a/About-Us.html
+++ b/About-Us.html
@@ -106,7 +106,7 @@
     <a href="home.html">Home</a>
     <a href="contact-Us.html">Contact Us</a>
     <a href="About-Us.html">About Us</a>
-
+</div>
 
     <h1>Operation ANI-HUB</h1>
     <h2>(Animation Network and Interactive Hub)</h2>
