--- a/About-Us.html
+++ b/About-Us.html
@@ -104,8 +104,8 @@
    <div class="navbar">
     <a href="index.html">Main Page</a>
     <a href="home.html">Home</a>
-    <a href="contact-Us.html">Contact Us</a>
-    <a href="About-Us.html">About Us</a>
+    <a href="contact-us.html">Contact Us</a>
+    <a href="about-us.html">About Us</a>
 </div>
 
     <h1>Operation ANI-HUB</h1>
@@ -131,45 +131,9 @@
            Macha, Nicole I.<br>
            Loyola, Christine Joy B.<br>
            Paulo, Jonah<br>
-           Samillano, Edrian P.</p>
+           Samillano 
 
-        <p><strong>Grade:</strong> 12<br>
-           <strong>Strand:</strong> Information and Communication Technology<br>
-           <strong>School:</strong> Angelo L. Loyola Senior High School<br>
-           <strong>District:</strong> City of Carmona</p>
+     
 
-        <h2>Introduction</h2>
-        <p>Animation NC II is a specialized subject at Angelo L. Loyola Senior High School (ALLSHS) in the Technical-Vocational-Livelihood (TVL) track in the strand of Information and Communication Technology (ICT). It aims to equip students with the skills necessary to produce digital animations. The curriculum includes fundamentals of animation, character design, storyboarding, and advanced animation software.</p>
-
-        <p>Access to computers is paramount for TVL-ICT Animation students, as it influences their ability to explore and excel in the field of animation. Mastering animation techniques on computers allows students to bring their creative visions to life and prepares them for future opportunities in the animation industry.</p>
-
-        <p>However, a significant problem arises in the Computer Laboratory of ICT Animation, where a limited number of computers results in students having to wait for access. This shortage adversely affects students' learning experiences and their ability to complete projects efficiently. The ANI-HUB project seeks to mitigate this issue by providing an online platform where students can access animation resources and tools remotely.</p>
-
-        <h2>Project Description</h2>
-        <p>Operation Ani-Hub is of paramount importance as it directly addresses the challenges faced by students in the ICT Animation computer laboratory. By providing a comprehensive online resource hub, students can continue their learning and practice animation techniques outside the classroom. The ANI-HUB website will feature tutorials, software recommendations, project ideas, and a community forum for students to share their work and seek feedback.</p>
-
-        <p>The website will be designed with user-friendly navigation, ensuring students can access the resources anytime and anywhere. This flexibility is particularly beneficial for students who may not have access to computers at home, as they can use mobile devices to continue their animation education.</p>
-
-        <h2>Objectives</h2>
-        <ul>
-            <li>Create a user-friendly website that serves as a centralized hub for free animation resources.</li>
-            <li>Enhance students' access to essential animation tools and educational materials.</li>
-            <li>Promote self-directed learning and resourcefulness among students.</li>
-            <li>Ensure the website is mobile-friendly and accessible.</li>
-            <li>Gather feedback from users to continuously improve the website.</li>
-        </ul>
-
-        <h2>Project Methodology</h2>
-        <p>The ANI-HUB website will be developed using HTML for structuring web content. The layout will consist of various elements like header, main, and footer to organize content effectively. CSS will be utilized for styling to ensure the website is visually appealing and responsive across various devices. By carefully combining HTML for structure with CSS for presentation, the ANI-HUB website aims to provide an optimal user experience for students.</p>
-    </div>
-
-    <div class="footer">
-        &copy; 2025 ANI-HUB | All Rights Reserved
-    </div>
-
-</body>
-</html>
-
-      
 
    
