--- a/about-us.html
+++ b/about-us.html
@@ -101,12 +101,13 @@
 </head>
 <body>
 
-   <div class="navbar">
-    <a href="index.html">Main Page</a>
-    <a href="home.html">Home</a>
-    <a href="contact-us.html">Contact Us</a>
-    <a href="about-us.html">About Us</a>
-</div>
+    <div class="navbar">
+        <a href="index.html">Main Page</a>
+        <a href="home.html">Home</a>
+        <a href="contact-us.html">Contact Us</a>
+        <a href="about-us.html">About Us</a>
+        </a>
+    </div>
 
     <h1>Operation ANI-HUB</h1>
     <h2>(Animation Network and Interactive Hub)</h2>
@@ -131,9 +132,43 @@
            Macha, Nicole I.<br>
            Loyola, Christine Joy B.<br>
            Paulo, Jonah<br>
-           Samillano 
+           Samillano, Edrian P.</p>
 
-     
+        <p><strong>Grade:</strong> 12<br>
+           <strong>Strand:</strong> Information and Communication Technology<br>
+           <strong>School:</strong> Angelo L. Loyola Senior High School<br>
+           <strong>District:</strong> City of Carmona</p>
 
+        <h2>Introduction</h2>
+        <p>Animation NC II is a specialized subject at Angelo L. Loyola Senior High School (ALLSHS) in the Technical-Vocational-Livelihood (TVL) track in the strand of Information and Communication Technology (ICT). It is the process of creating an illusion of movement by displaying a series of images or frames in rapid succession. This art form is integral to multiple sectors, including entertainment, education, advertising, and communication, emphasizing the importance of animation in today’s visual culture.</p>
 
-   
+        <p>Access to computers is paramount for TVL-ICT Animation students, as it influences their ability to explore and excel in the field of animation. Mastering animation techniques on computer systems not only fosters creativity but also equips students with essential skills required in today’s digital environment.</p>
+
+        <p>However, a significant problem arises in the Computer Laboratory of ICT Animation, where a limited number of computers results in students having to wait for access. This shortage adversely affects their learning experience, restricting practice time and hindering skill development.</p>
+
+        <h2>Project Description</h2>
+        <p>Operation Ani-Hub is of paramount importance as it directly addresses the challenges faced by students in the ICT Animation computer laboratory. By providing a comprehensive online resource, this aims to enhance students' access to essential modules, images, videos, explanations, and many more tutorials that are crucial for mastering animation skills.</p>
+
+        <p>The website will be designed with user-friendly navigation, ensuring students can access the resources anytime and anywhere. This flexibility is particularly beneficial for students who may not have consistent access to computers in the lab, allowing them to continue their learning outside of the classroom environment.</p>
+
+        <h2>Objectives</h2>
+        <ul>
+            <li>Create a user-friendly website that serves as a centralized hub for free animation resources.</li>
+            <li>Enhance students' access to essential animation tools and educational materials.</li>
+            <li>Promote self-directed learning and resourcefulness among students.</li>
+            <li>Ensure the website is mobile-friendly and accessible.</li>
+            <li>Gather feedback from users to continuously improve the website.</li>
+        </ul>
+
+        <h2>Project Methodology</h2>
+        <p>The ANI-HUB website will be developed using HTML for structuring web content. The layout will consist of various elements like header, main, and footer to organize content effectively. Navigation links will be incorporated to ensure users can easily access different sections.</p>
+
+        <p>CSS will be utilized for styling to ensure the website is visually appealing and responsive across various devices. By carefully combining HTML for structure with CSS for presentation, the ANI-HUB website aims to deliver a captivating experience for students.</p>
+    </div>
+
+    <div class="footer">
+        &copy; 2025 ANI-HUB | All Rights Reserved
+    </div>
+
+</body>
+</html>
