--- a/About-Us.html
+++ b/About-Us.html
@@ -102,39 +102,34 @@
 <body>
 
 <div class="navbar">
+         <a href="index.html">Main Page</a>
+         <a 
         <a href="index.html">Main Page</a>
+    <a href="index.html">Main Page</a>
         <a href="home.html">Home</a>
+    <a href="home.html">Home</a>
         <a href="contact-us.html">Contact Us</a>
+    <a href="contact-us.html">Contact Us</a>
         <a href="about-us.html">About Us</a>
+    <a href="about-us.html">About Us</a>
         </a>
-    </div>
 
     <h1>Operation ANI-HUB</h1>
     <h2>(Animation Network and Interactive Hub)</h2>
 
     <p>Free mobile-friendly animation resources available online</p>
 
-   
     <div class="content">
         <h2>Developed by:</h2>
         <p>Macatangay, Samara Mandy J.<br>
            Macha, Nicole I.<br>
            Loyola, Christine Joy B.<br>
            Paulo, Jonah<br>
-           Samillano, Edrian</p>
+           Samillano, 
+Edrian</p>
 
-        <h2>January 2025</h2>
-
-        <h2>Title of Innovation: ANI-HUB (Animation Network and Interactive Hub)</h2>
-
-        <h2>Project Developers:</h2>
-        <p>Macatangay, Samara Mandy J.<br>
-           Macha, Nicole I.<br>
-           Loyola, Christine Joy B.<br>
-           Paulo, Jonah<br>
-           Samillano, Edrian P.</p>
-
-        <p><strong>Grade:</strong> 12<br>
+      
+ <p><strong>Grade:</strong> 12<br>
            <strong>Strand:</strong> Information and Communication Technology<br>
            <strong>School:</strong> Angelo L. Loyola Senior High School<br>
            <strong>District:</strong> City of Carmona</p>
@@ -169,6 +164,6 @@
     <div class="footer">
         &copy; 2025 ANI-HUB | All Rights Reserved
     </div>
-
+   
 </body>
 </html>
